fix blockquote inline style

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -188,9 +188,9 @@ pre.twoslash data-lsp:hover::before {
 
 .urara-prose blockquote:before {
   vertical-align: -0.4em;
-  @apply mr-2 text-5xl leading-3 italic font-serif  opacity-25;
+  @apply mr-2 text-5xl mt-4 leading-3 italic font-serif  opacity-25 float-left;
 }
 
 .urara-prose blockquote p {
-  @apply inline opacity-80  before:content-[''] after:content-[''];
+  @apply opacity-80  before:content-[''] after:content-[''];
 }
